# fhttp

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  basic_http_server.cc
examples/basic_http_server/: CMakeLists.txt  README.md
examples/basic_http_server/config/: setup_config.sh
examples/basic_http_server/src/: config.h  handlers.h  main.cc  models.h  states.h  views.h
examples/www/static/: index.html
include/fhttp/: cookies.h  env.h  errors.h  headers.h  http_server.h  logging.h  meta.h  random_stuff.h  request.h  response.h  status_codes.h  swagger_generator.h
include/fhttp/data/: data.h  json.h
src/: CMakeLists.txt  cookies.cc  cookies.h  cpp_playground.cc  datalib.h  headers.h  http_server.cc  http_server.h  logging.cc  logging.h  meta.h  random_stuff.h  request.cc  request.h  request_parser.cc  request_parser.h  response.h
src/data/: json.cc
tests/: README.md
